--- a/coolRAT-master/coolRAT-master.csproj
+++ b/coolRAT-master/coolRAT-master.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server_PacketHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
