--- a/coolRAT-master/coolRAT-master.csproj
+++ b/coolRAT-master/coolRAT-master.csproj
@@ -38,6 +38,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +51,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server_PacketHandler.cs" />
+    <Compile Include="ShellWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShellWindow.Designer.cs">
+      <DependentUpon>ShellWindow.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -59,6 +67,11 @@
       <Project>{BF2AA8AF-F840-4A01-94A1-796004069D94}</Project>
       <Name>coolRAT-libs</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ShellWindow.resx">
+      <DependentUpon>ShellWindow.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
