--- a/coolRAT/coolRAT-slave.csproj
+++ b/coolRAT/coolRAT-slave.csproj
@@ -49,6 +49,9 @@
     <Compile Include="MasterFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shell_PacketHandler.cs" />
+    <Compile Include="SlaveGlobalData.cs" />
+    <Compile Include="Slave_PacketHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
