--- a/coolRAT-master/coolRAT-master.csproj
+++ b/coolRAT-master/coolRAT-master.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShellWindow.Designer.cs">
+      <DependentUpon>ShellWindow.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
