--- a/coolRAT-master/coolRAT-master.csproj
+++ b/coolRAT-master/coolRAT-master.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScreenWindow.Designer.cs">
+      <DependentUpon>ScreenWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShellWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,11 @@
       <Project>{BF2AA8AF-F840-4A01-94A1-796004069D94}</Project>
       <Name>coolRAT-libs</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ScreenWindow.resx">
+      <DependentUpon>ScreenWindow.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
